source/stylesheets/_custom.scss
@font-face {
    font-family: 'special_eliteregular';
    src: url('../fonts/specialelite-webfont.eot');
    src: url('../fonts/specialelite-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/specialelite-webfont.woff2') format('woff2'),
         url('../fonts/specialelite-webfont.woff') format('woff'),
         url('../fonts/specialelite-webfont.ttf') format('truetype'),
         url('../fonts/specialelite-webfont.svg#special_eliteregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body{
  overflow-x: hidden;
  font-family: 'special_eliteregular';
  background-color: #e93535;
}

.full-w{
  width: 100%;
}

.album-img{
  width: 120%;
  margin-left: -20%;
}

main{
  // overflow-x: hidden;
  background-image: url('https://s3.amazonaws.com/myfangate.com/ptv2016/repeatingpaper.jpg');
  background-repeat: repeat;
}

.torn-paper{
  background-image: url('https://s3.amazonaws.com/myfangate.com/ptv2016/tornpaper.png');
  background-repeat: repeat-y;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 745px;
  height: 100%;
  z-index: 0;
}


.torn-paper-l{
  background-image: url('https://s3.amazonaws.com/myfangate.com/ptv2016/tornpaperL.png');
  background-repeat: repeat-y;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 745px;
  height: 100%;
  z-index: 0;
}

footer{
  position: relative;
  z-index: 998;
  background-image: url('https://s3.amazonaws.com/myfangate.com/ptv2016/repeatingredpaper.jpg');
  background-repeat: repeat;
}

footer, footer a, footer h5, footer p, .footer-copyright{
  color: #e93535 !important;
}

footer:before{
  width: 100%;
  content: " ";
  background-image: url('https://s3.amazonaws.com/myfangate.com/ptv2016/tornred.png');
  position: absolute;
  height: 230px;
  margin-top: -112px;
  z-index: 99999999;
  background-position: left;
}


footer.page-footer{
  margin-top: 0;
}
footer.page-footer .footer-copyright{
  background-color: #e93535;
  color: white !important;
  a{
    color: white;
  }
}

h1,h2,h3,h4,h5,h6{
  font-family: 'special_eliteregular';
  color: #e93535 !important;
  z-index: 99999999;
  position: relative;
}

.no-margin{
  margin: 0;
}

.cta{
  margin-top: 6%;
}

.ptv-red,
.ptv-red:hover,
.ptv-red:active,
.ptv-red:focus{
  background-color: #e93535;
}

.ptv-red-text{
  color: #e93535;
}

.disc{
  font-size: 10px;
}

.video-container{
  overflow: visible;
  margin-top: 10%;
}

/* label color */
 .input-field label {
   color: #fff;
 }
 /* label focus color */
 .input-field input[type=email]:focus + label {
   color: #fff;
 }
 /* label underline focus color */
 .input-field input[type=email]:focus {
   border-bottom: 1px solid #fff;
   box-shadow: 0 1px 0 0 #fff;
 }
 /* valid color */
 .input-field input[type=email].valid {
   border-bottom: 1px solid #fff;
   box-shadow: 0 1px 0 0 #fff;
 }
 /* invalid color */
 .input-field input[type=email].invalid {
   border-bottom: 1px solid #fff;
   box-shadow: 0 1px 0 0 #fff;
 }
 /* icon prefix focus color */
 .input-field .prefix.active {
   color: #fff;
 }

span.error{
  display: none !important;
}

div.toast.red{
  z-index: 99999999999999999999999 !important;
  position: relative;
}

.album-info{
  z-index: 9999999999 !important;
  position: relative;
  margin-bottom: 0;
}

.video-bg{
  width: 120%;
  margin-left: -10%;
  margin-top: -10%;
}

.video{
  position: relative;
  z-index: 999;
  margin-left: -80px !important;
}

.new-album{
  z-index: 999999;
  position: relative;
  max-width: 500px;
  margin: 0 auto;
  width: 100%;
}

@media (max-width: 600px){
}

@media (max-width: 992px){
  .torn-paper-l{
    display: none;
  }
}

@media (max-width: 1400px){
  .album-img{
    width: 170%;
    margin-left: -60%;
  }
  .new-album{
    margin-top: 20%;
  }
  .torn-paper-l{
    display: none;
  }
  .video{
    margin-left: auto !important;
  }
}

@media (max-width: 991px){
  .album-img{
    width: 170%;
    margin-left: -48%;
  }
}

@media (max-width: 696px){
  .album-img{
    width: 190%;
    margin-left: -58%;
  }
}

@media (max-width: 600px){
  .cta{
    h2{
      font-size: 36px;
    }
    h5{
      font-size: 14px;
    }
  }
  .album-img{
    width: 120%;
    margin-left: -9%;
  }
  .new-album{
    margin-top: 0;
    margin-bottom: 80px !important;
  }
  .video-bg{
    width: 125%;
    margin-left: -12%;
    margin-top: -12%;
  }
  .video-container{
    margin-top: -20%;
  }
}

.btn{
  font-family: 'special_eliteregular';
  border: 2px solid white;
  font-size: 30px;
}

